--- a/upgraderefacto/libp2p/crypto/crypto.html
+++ b/upgraderefacto/libp2p/crypto/crypto.html
@@ -1729,7 +1729,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="../utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#public.t"><span class="Identifier">public</span></a>
+<a href="../utility.html#compilesOr.t,untyped,untyped"><span class="Identifier">compilesOr</span></a>, <a href="../utility.html#shortLog,string"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#shortLog,openArray[byte]"><span class="Identifier">shortLog</span></a>, <a href="../utility.html#public.t"><span class="Identifier">public</span></a>
 </dl></div>
 
   </div>
@@ -1739,7 +1739,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-01-30 17:33:31 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-21 10:35:59 UTC</small>
       </div>
     </div>
   </div>
