--- a/mcachehitmetric/libp2p/muxers/yamux/yamux.html
+++ b/mcachehitmetric/libp2p/muxers/yamux/yamux.html
@@ -277,6 +277,11 @@ window.addEventListener("DOMContentLoaded", main2);
     title="closeImpl(channel: YamuxChannel): Future[void]">closeImpl(channel: YamuxChannel): Future[void]</a></li>
 
   </ul>
+  <ul class="simple nested-toc-section">getWrapped
+      <li><a class="reference" href="#getWrapped.e%2CYamuxChannel"
+    title="getWrapped(channel: YamuxChannel): Connection">getWrapped(channel: YamuxChannel): Connection</a></li>
+
+  </ul>
   <ul class="simple nested-toc-section">handle
       <li><a class="reference" href="#handle.e%2CYamux"
     title="handle(m: Yamux): Future[void]">handle(m: Yamux): Future[void]</a></li>
@@ -344,9 +349,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L362"
+href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L364"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L362" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L364" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -420,9 +425,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L524"
+href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L526"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L524" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L526" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -464,9 +469,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L409"
+href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L411"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L409" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L411" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -483,6 +488,18 @@ class="link-seesrc" target="_blank">Source</a>
 
 </dd>
 </div>
+<div id="getWrapped.e,YamuxChannel" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#getWrapped.e%2CYamuxChannel"><span class="Identifier">getWrapped</span></a><span class="Other">(</span><span class="Identifier">channel</span><span class="Other">:</span> <a href="yamux.html#YamuxChannel"><span class="Identifier">YamuxChannel</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../stream/connection.html#Connection"><span class="Identifier">Connection</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
+<dd>
+
+
+&nbsp;&nbsp;<a
+href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L361"
+class="link-seesrc" target="_blank">Source</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L361" class="link-seesrc" target="_blank" >Edit</a>
+
+</dd>
+</div>
 <div id="handle.e,Yamux" class="tohide">
 <dt><pre><span class="Keyword">method</span> <a href="#handle.e%2CYamux"><span class="Identifier">handle</span></a><span class="Other">(</span><span class="Identifier">m</span><span class="Other">:</span> <a href="yamux.html#Yamux"><span class="Identifier">Yamux</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><span class="Identifier">void</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
                                         <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
@@ -491,9 +508,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L435"
+href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L437"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L435" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L437" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -505,9 +522,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L514"
+href="https://github.com/status-im/nim-libp2p/tree/mcachehitmetric/libp2p/muxers/yamux/yamux.nim#L516"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L514" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/muxers/yamux/yamux.nim#L516" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -564,7 +581,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-22 10:16:04 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-02-22 10:18:13 UTC</small>
       </div>
     </div>
   </div>
